--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -1,27 +1,31 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-    <a class="navbar-brand" routerLink="/">Sneaker Shop</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/shoppingcart">Shopping Cart</a>
-        </li>
+  <a class="navbar-brand" routerLink="/">SneakerShop</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+    aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/shoppingcart">Shopping Cart</a>
+      </li>
+      <ng-template #anonymousUser>
         <li class="nav-item">
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
-        <li ngbDropdown class="nav-item dropdown">
-          <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Username</a>
-          <div ngbDropdownMenu class="dropdown-menu show" aria-labelledby="dropdown01">
-            <a class="dropdown-item" routerLink="/my-orders">My Orders</a>
-            <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
-            <a class="dropdown-item" routerLink="/admin/inventory">Manage Inventory</a>
-            <a class="dropdown-item">Log Out</a>
+      </ng-template>
+      <li ngbDropdown *ngIf="user$ | async as user; else anonymousUser" class="nav-item dropdown">
+        <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false"></a>
+        {{ user.displayName }}
+        <div ngbDropdownMenu class="dropdown-menu show" aria-labelledby="dropdown01">
+          <a class="dropdown-item" routerLink="/my-orders">My Orders</a>
+          <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
+          <a class="dropdown-item" routerLink="/admin/inventory">Manage Inventory</a>
+          <a class="dropdown-item" (click)="logout()">Log Out</a>
         </div>
-        </li>
-      </ul>
-    
-    </div>
+      </li>
+    </ul>
+  </div>
 </nav>
